RESOLVED FIXED198893
[LFC][IFC] Ignore descent when in limited quirks mode
https://bugs.webkit.org/show_bug.cgi?id=198893
Summary [LFC][IFC] Ignore descent when in limited quirks mode
alan
Reported 2019-06-15 16:15:05 PDT
and the line does not have baseline aligned content with descent.
Attachments
Patch (4.24 KB, patch)
2019-06-15 16:42 PDT, alan
koivisto: review+
Radar WebKit Bug Importer
Comment 1 2019-06-15 16:16:11 PDT
alan
Comment 2 2019-06-15 16:42:14 PDT
alan
Comment 3 2019-06-16 13:04:36 PDT
Note You need to log in before you can comment on or make changes to this bug.