[LFC][IFC] Ignore descent when in limited/full quirks mode https://bugs.webkit.org/show_bug.cgi?id=198893 <rdar://problem/51780634>

Reviewed by Antti Koivisto.

In limited/full quirks mode, line's descent should be ignored when computing the final line height when
1. the line has baseline aligned content only and
2. these baseline aligned boxes don't have descent.

* layout/inlineformatting/InlineLine.cpp:
(WebCore::Layout::Line::isVisuallyEmpty const):
(WebCore::Layout::Line::close):

Canonical link: https://commits.webkit.org/212873@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246481 268f45cc-cd09-0410-ab3c-d52691b4dbfc